--- a/src/components/AccommodationPage.css
+++ b/src/components/AccommodationPage.css
@@ -6,10 +6,11 @@ main {
 }
 
 .room-card {
+    box-shadow: 0px 3px 15px #192841;
+    border-radius: 10px;
     margin: 20px;
-    width: 800px;
+    width: 1000px;
     height: 250px;
-    border-radius: 20px;
     background-color: #d6ccc2;
     display: flex;
     align-items: center;
