--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -14,7 +14,8 @@ main {
     padding: 20px;
     width: 300px;
     height: 200px;
-    border-radius: 5px;
+    box-shadow: 0px 3px 15px #192841;
+    border-radius: 10px;
 }
 
 .form-input {
@@ -24,10 +25,4 @@ main {
     color: #192841;
     width: 250px;
     height: 25px;
-}
-
-.form-button {
-    background-color: #edede9;
-    font-weight: bold;
-    border-radius: 5px;
 }
