--- a/src/components/AccommodationPage.css
+++ b/src/components/AccommodationPage.css
@@ -5,21 +5,24 @@ main {
     flex-direction: column;
 }
 
+h1 {
+    font-size: 22px;
+}
+h2 {
+    font-size: 18px;
+}
+
 .room-card {
-    box-shadow: 0px 3px 15px #192841;
-    border-radius: 10px;
-    margin: 20px;
-    width: 1000px;
-    height: 250px;
-    background-color: #d6ccc2;
     display: flex;
     align-items: center;
     justify-content: left;
+    display: flex;
+    flex-direction: row;
 }
 
 .room-image {
     padding: 10px;
-    height: 200px;
+    height: 180px;
     width: 300px;
 }
 
