working on auth

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@ h4 {
 
 
 .App-header {
+  position: sticky;
+  top: 0;
   font-family: Arial Narrow;
   background-color: #d6ccc2;
   min-height: 8vh;
