--- a/src/components/Activities.css
+++ b/src/components/Activities.css
@@ -1,4 +1,5 @@
 body {
+    background-image:("https://www.scrubisland.com/content/uploads/2015/10/cta-hiking.jpg");
     font-style: arial;
     color: #192841;
 }
