--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,15 @@ h4 {
 }
 
 .App-main {
-  background-color: #edede9;
   padding: 15px;
 }
 
 
 
 .App-header {
-  position: sticky;
-  top: 0;
   font-family: Arial Narrow;
   background-color: #d6ccc2;
-  min-height: 8vh;
+  height: 15vh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -76,9 +73,13 @@ h4 {
 }
 
 .info {
+  padding: 20px;
   text-align: center;
-  font-size: 16px;
-  width: 45%
+  font-size: 20px;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .block-image {
@@ -89,4 +90,12 @@ h4 {
 .activity-card {
   display: flex;
     flex-direction: column;
+}
+
+.footer {
+  height: 20px;
+  background-color:#d5bdaf;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
