--- a/src/components/Activities.css
+++ b/src/components/Activities.css
@@ -1,5 +1,5 @@
-body {
-    background-image:("https://www.scrubisland.com/content/uploads/2015/10/cta-hiking.jpg");
+main {
+    background-image:url("https://nomadiccosmopolitan.files.wordpress.com/2014/03/photo.jpg");
     font-style: arial;
     color: #192841;
 }
