--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -1,4 +1,9 @@
-main {
+
+
+.outer{
+    height: 100%;
+    width: 100%;
+    background-color:white;
     display: flex;
     justify-content: center;
     padding: 50px;
@@ -9,11 +14,11 @@ main {
     color: #192841;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding: 20px;
     width: 300px;
-    height: 800px;
+    height: 200px;
     box-shadow: 0px 3px 15px #192841;
     border-radius: 10px;
 }
